# face_recognition_ros

./: CMakeLists.txt  README.md  package.xml  tags
action/: FaceRecog.action  PhotoAction.action
scripts/: client_test.py  example_action.py  face_action_client.py  face_action_server.py  face_photo_action.py  face_recog_action.py  face_recog_manager.py  face_recog_service.py  face_recog_srv_client.py  face_recognition  face_service.py  from PIL import Image.py  speech_sub  take_face_photo_server.py  take_photo_server.py  task_sppech.py  test_ros
srv/: face_recognition_srv.srv  take_photo.srv
