<?xml version="1.0"?>
<package format="2">
  <name>face_recognition_ros</name>
  <version>0.0.0</version>
  <description>The face_recognition package</description>

  <maintainer email="steveminq@utexas.edu">steveminq</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>tmc_yolo2_ros</depend>
  <depend>villa_rude_carnie_ros</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>keyboard</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
 </package>
